added the list of contents

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -377,20 +377,6 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -903,9 +889,9 @@
    "source": [
     "<br>\n",
     "\n",
-    "# Data Transfer; Host-to-device and device-to-host\n",
+    "# \n",
     "\n",
-    "---"
+    "---\n"
    ]
   },
   {
@@ -935,6 +921,50 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is a list of topics you should learn to get started with Numba and CUDA:\n",
+    "\n",
+    "Python and NumPy: Familiarize yourself with Python and NumPy as they are the foundation for using Numba.\n",
+    "\n",
+    "Numba basics:\n",
+    "\n",
+    "Just-In-Time (JIT) compilation\n",
+    "Numba decorators: @jit, @njit, @vectorize, @guvectorize\n",
+    "Supported Python and NumPy features in Numba\n",
+    "CUDA basics:\n",
+    "\n",
+    "GPU architecture and programming model\n",
+    "CUDA memory hierarchy: global, shared, local, and constant memory\n",
+    "CUDA threads, thread blocks, and grids\n",
+    "Synchronization primitives: barriers and events\n",
+    "Numba for CUDA:\n",
+    "\n",
+    "Numba CUDA decorators: @cuda.jit, @cuda.vectorize, @cuda.reduce\n",
+    "Memory management with Numba: cuda.to_device(), cuda.device_array(), cuda.device_array_like(), cuda.pinned_array()\n",
+    "Host-to-device and device-to-host data transfers: copy_to_device(), copy_to_host()\n",
+    "Device function compilation with @cuda.jit(device=True)\n",
+    "Thread, block, and grid indexing: cuda.grid(), cuda.gridsize(), cuda.threadIdx, cuda.blockIdx, cuda.blockDim, cuda.gridDim\n",
+    "Synchronization: cuda.syncthreads()\n",
+    "Atomic operations: cuda.atomic.add(), cuda.atomic.max(), etc.\n",
+    "Dynamic shared memory allocation\n",
+    "Performance optimization:\n",
+    "\n",
+    "Coalesced memory access patterns\n",
+    "Shared memory utilization\n",
+    "Occupancy maximization\n",
+    "Thread divergence and warp execution\n",
+    "Profiling tools: Nsight Compute, Nsight Systems, and nvprof\n",
+    "Performance optimization strategies: loop unrolling, constant memory utilization, etc.\n",
+    "Interoperability:\n",
+    "\n",
+    "Interfacing Numba with other GPU libraries like CuPy or PyTorch\n",
+    "Interfacing Numba with C/C++ code using the Python C-API, ctypes, or CFFI"
+   ]
   }
  ],
  "metadata": {
