--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -402,9 +402,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Soheil.Mohammadpour\\.conda\\envs\\predator\\lib\\site-packages\\numba\\cuda\\dispatcher.py:488: NumbaPerformanceWarning: \u001b[1mGrid size 4 will likely result in GPU under-utilization due to low occupancy.\u001b[0m\n",
+      "  warn(NumbaPerformanceWarning(msg))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output Array: [  0.   1.   4.   9.  16.  25.  36.  49.  64.  81. 100. 121. 144. 169.\n",
+      " 196. 225.]\n"
+     ]
+    }
+   ],
    "source": [
     "# Define a CUDA kernel\n",
     "@cuda.jit\n",
@@ -427,32 +444,8 @@
     "        cuda.syncthreads()\n",
     "\n",
     "        # Combine the values and store in the output array\n",
-    "        output_array[idx] = local_value * shared_mem[cuda.threadIdx.x]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Soheil.Mohammadpour\\.conda\\envs\\predator\\lib\\site-packages\\numba\\cuda\\dispatcher.py:488: NumbaPerformanceWarning: \u001b[1mGrid size 4 will likely result in GPU under-utilization due to low occupancy.\u001b[0m\n",
-      "  warn(NumbaPerformanceWarning(msg))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Output Array: [  0.   1.   4.   9.  16.  25.  36.  49.  64.  81. 100. 121. 144. 169.\n",
-      " 196. 225.]\n"
-     ]
-    }
-   ],
-   "source": [
+    "        output_array[idx] = local_value * shared_mem[cuda.threadIdx.x]\n",
+    "        \n",
     "# Create an input and output array on the host\n",
     "input_array = np.arange(16, dtype=np.float32)\n",
     "output_array = np.zeros_like(input_array)\n",
@@ -473,6 +466,59 @@
     "\n",
     "# Print the output array\n",
     "print(\"Output Array:\", output_array)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from numba import cuda, float32\n",
+    "\n",
+    "# Host function to calculate squared distance between two points\n",
+    "def squared_distance_host(point_a, point_b):\n",
+    "    return (point_a[0] - point_b[0])**2 + (point_a[1] - point_b[1])**2\n",
+    "\n",
+    "# Device function to calculate squared distance between two points\n",
+    "@cuda.jit(device=True)\n",
+    "def squared_distance(point_a, point_b):\n",
+    "    return (point_a[0] - point_b[0])**2 + (point_a[1] - point_b[1])**2\n",
+    "\n",
+    "# CUDA kernel function to compute pairwise distances between two sets of points\n",
+    "@cuda.jit\n",
+    "def pairwise_distance_kernel(points_a, points_b, result):\n",
+    "    i, j = cuda.grid(2)  # Get the 2D indices i and j\n",
+    "    if i < result.shape[0] and j < result.shape[1]:\n",
+    "        point_a = points_a[i]\n",
+    "        point_b = points_b[j]\n",
+    "        result[i, j] = squared_distance(point_a, point_b)  # Compute the distance\n",
+    "\n",
+    "# Sample input points\n",
+    "points_a = np.array([(1, 2), (3, 4), (5, 6)], dtype=np.float32)\n",
+    "points_b = np.array([(10, 11), (12, 13)], dtype=np.float32)\n",
+    "\n",
+    "# Prepare an empty result array to store the pairwise distances\n",
+    "result = np.empty((points_a.shape[0], points_b.shape[0]), dtype=np.float32)\n",
+    "\n",
+    "# Define the CUDA kernel launch configuration\n",
+    "threads_per_block = (16, 16)\n",
+    "blocks_per_grid_x = int(np.ceil(points_a.shape[0] / threads_per_block[0]))\n",
+    "blocks_per_grid_y = int(np.ceil(points_b.shape[0] / threads_per_block[1]))\n",
+    "blocks_per_grid = (blocks_per_grid_x, blocks_per_grid_y)\n",
+    "\n",
+    "# Launch the CUDA kernel\n",
+    "pairwise_distance_kernel[blocks_per_grid, threads_per_block](points_a, points_b, result)\n",
+    "\n",
+    "# Calculate the expected pairwise distances using the host function\n",
+    "expected_result = np.empty((points_a.shape[0], points_b.shape[0]), dtype=np.float32)\n",
+    "for i in range(points_a.shape[0]):\n",
+    "    for j in range(points_b.shape[0]):\n",
+    "        expected_result[i, j] = squared_distance_host(points_a[i], points_b[j])\n",
+    "\n",
+    "# Check if the computed result matches the expected result\n",
+    "assert np.allclose(result, expected_result)\n"
    ]
   },
   {
@@ -580,7 +626,7 @@
     "\n",
     "In this section, you'll use the tools for controlling the order and timing of the operations in parallel computing.\n",
     "\n",
-    "__Synchronization__ is the coordination of multiple threads or processes to ensure that they execute in a specific order or at a specific time. In parallel computing, synchronization is important to prevent race conditions and to ensure that operations are performed correctly.\n",
+    "__Synchronization__ is essential in parallel programming, as it allows threads to wait for each other before proceeding to the next step. This ensures correct execution and prevents race conditions. \n",
     "\n",
     "Synchronization is achieved using synchronization primitives such as barriers and events:\n",
     "1. __Barriers__: A barrier is a synchronization primitive that forces threads to wait until all other threads in the group have reached the barrier before allowing any thread to proceed.  The `--syncthreads()` function is used to synchronize threads within a block. All threads in the block must reach the `--syncthreads()` call before any thread can proceed beyond it.\n"
@@ -663,6 +709,100 @@
     "event2.record(stream)\n",
     "event1.synchronize()\n",
     "event2.synchronize()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "The `cuda.syncthreads()` function is used to synchronize threads within a block in Numba."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Soheil.Mohammadpour\\.conda\\envs\\predator\\lib\\site-packages\\numba\\cuda\\dispatcher.py:488: NumbaPerformanceWarning: \u001b[1mGrid size 1 will likely result in GPU under-utilization due to low occupancy.\u001b[0m\n",
+      "  warn(NumbaPerformanceWarning(msg))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Array:\n",
+      "[[0 9 7 ... 8 0 5]\n",
+      " [4 4 5 ... 3 1 2]\n",
+      " [1 6 2 ... 6 5 2]\n",
+      " ...\n",
+      " [4 8 6 ... 0 6 5]\n",
+      " [1 2 7 ... 5 8 2]\n",
+      " [7 0 3 ... 8 7 4]]\n",
+      "\n",
+      "Row-wise Prefix Sum Array:\n",
+      "[[  0   9   7 ...   8   0   5]\n",
+      " [  4   8   5 ...   3   1   2]\n",
+      " [  1   6   9 ...   6   5   2]\n",
+      " ...\n",
+      " [  4   8   6 ... 143   6   5]\n",
+      " [  1   2   7 ...   5 133   2]\n",
+      " [  7   0   3 ...   8   7 137]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Soheil.Mohammadpour\\.conda\\envs\\predator\\lib\\site-packages\\numba\\cuda\\cudadrv\\devicearray.py:885: NumbaPerformanceWarning: \u001b[1mHost array used in CUDA kernel will incur copy overhead to/from device.\u001b[0m\n",
+      "  warn(NumbaPerformanceWarning(msg))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the kernel function\n",
+    "@cuda.jit\n",
+    "def row_wise_prefix_sum_kernel(input_array, output_array):\n",
+    "    tx = cuda.threadIdx.x\n",
+    "    bx = cuda.blockIdx.x\n",
+    "    bw = cuda.blockDim.x\n",
+    "    i = tx + bx * bw\n",
+    "\n",
+    "    if i < input_array.shape[0]:\n",
+    "        row_length = input_array.shape[1]\n",
+    "        \n",
+    "        for step in range(1, row_length):\n",
+    "            if tx >= step:\n",
+    "                output_array[i, tx] += input_array[i, tx - step]\n",
+    "            \n",
+    "            # Synchronize threads within the block\n",
+    "            cuda.syncthreads()\n",
+    "\n",
+    "# Create input and output arrays\n",
+    "input_array = np.random.randint(0, 10, (32, 32)).astype(np.int32)\n",
+    "output_array = input_array.copy()\n",
+    "\n",
+    "# Configure the CUDA kernel launch\n",
+    "threads_per_block = (32, 1)\n",
+    "blocks_per_grid_x = int(np.ceil(input_array.shape[0] / threads_per_block[0]))\n",
+    "blocks_per_grid_y = 1\n",
+    "blocks_per_grid = (blocks_per_grid_x, blocks_per_grid_y)\n",
+    "\n",
+    "# Launch the kernel\n",
+    "row_wise_prefix_sum_kernel[blocks_per_grid, threads_per_block](input_array, output_array)\n",
+    "\n",
+    "# Check results\n",
+    "print(\"Input Array:\")\n",
+    "print(input_array)\n",
+    "print(\"\\nRow-wise Prefix Sum Array:\")\n",
+    "print(output_array)\n"
    ]
   },
   {
@@ -889,9 +1029,97 @@
    "source": [
     "<br>\n",
     "\n",
-    "# \n",
+    "# Atomic operations\n",
     "\n",
-    "---\n"
+    "---\n",
+    "\n",
+    "__Atomic operations__ are crucial in parallel programming to avoid race conditions and ensure data consistency when multiple threads access shared memory simultaneously. Numba provides several atomic operations for use in CUDA kernels. These operations are essential for managing concurrent access to shared memory by multiple threads. Atomic operations read, modify, and write back a value in a single, uninterruptible step, ensuring that race conditions do not occur.\n",
+    "\n",
+    "Methods in atomic operation:\n",
+    "| Operation                                     | Description                                                                                        |\n",
+    "|-----------------------------------------------|----------------------------------------------------------------------------------------------------|\n",
+    "| cuda.atomic.add(array, index, value)          | Atomically adds the value to the element at index in the array.                                    |\n",
+    "| cuda.atomic.sub(array, index, value)          | Atomically subtracts the value from the element at index in the array.                             |\n",
+    "| cuda.atomic.min(array, index, value)          | Atomically updates the element at index with the minimum of its current value and the provided value.|\n",
+    "| cuda.atomic.max(array, index, value)          | Atomically updates the element at index with the maximum of its current value and the provided value.|\n",
+    "| cuda.atomic.compare_and_swap(array, old_value, new_value) | Atomically compares the element at index with old_value and updates it with new_value if they match. |\n",
+    "| cuda.atomic.nanmin(array, index, value)       | Atomically updates the element at index with the minimum of its current value and the provided value, ignoring NaN values. |\n",
+    "| cuda.atomic.nanmax(array, index, value)       | Atomically updates the element at index with the maximum of its current value and the provided value, ignoring NaN values. |\n",
+    "| cuda.atomic.exchange(array, index, value)     | Atomically swaps the element at index in the array with the provided value.                         |\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Soheil.Mohammadpour\\.conda\\envs\\predator\\lib\\site-packages\\numba\\cuda\\dispatcher.py:488: NumbaPerformanceWarning: \u001b[1mGrid size 16 will likely result in GPU under-utilization due to low occupancy.\u001b[0m\n",
+      "  warn(NumbaPerformanceWarning(msg))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computed histogram:\n",
+      "[125  95 101  94  87 114 108 114  84 102]\n",
+      "\n",
+      "Expected histogram:\n",
+      "[125  95 101  94  87 114 108 114  84 102]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Soheil.Mohammadpour\\.conda\\envs\\predator\\lib\\site-packages\\numba\\cuda\\cudadrv\\devicearray.py:885: NumbaPerformanceWarning: \u001b[1mHost array used in CUDA kernel will incur copy overhead to/from device.\u001b[0m\n",
+      "  warn(NumbaPerformanceWarning(msg))\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from numba import cuda\n",
+    "\n",
+    "# Define the kernel function\n",
+    "@cuda.jit\n",
+    "def histogram_kernel(input_array, bins, bin_counts):\n",
+    "    tx = cuda.threadIdx.x + cuda.blockIdx.x * cuda.blockDim.x\n",
+    "    ty = cuda.threadIdx.y + cuda.blockIdx.y * cuda.blockDim.y\n",
+    "    \n",
+    "    if tx < input_array.shape[0] and ty < input_array.shape[1]:\n",
+    "        value = input_array[tx, ty]\n",
+    "        bin_idx = 0\n",
+    "        for i in range(bins.shape[0] - 1):\n",
+    "            if bins[i] <= value < bins[i + 1]:\n",
+    "                bin_idx = i\n",
+    "                break\n",
+    "        cuda.atomic.add(bin_counts, bin_idx, 1)\n",
+    "\n",
+    "# Create input array, bins, and bin_counts\n",
+    "input_array = np.random.randint(0, 100, (32, 32)).astype(np.int32)\n",
+    "bins = np.linspace(0, 100, 11).astype(np.int32)\n",
+    "bin_counts = np.zeros(bins.size - 1, dtype=np.int32)\n",
+    "\n",
+    "# Configure the CUDA kernel launch\n",
+    "threads_per_block = (8, 8)\n",
+    "blocks_per_grid_x = int(np.ceil(input_array.shape[0] / threads_per_block[0]))\n",
+    "blocks_per_grid_y = int(np.ceil(input_array.shape[1] / threads_per_block[1]))\n",
+    "blocks_per_grid = (blocks_per_grid_x, blocks_per_grid_y)\n",
+    "\n",
+    "# Launch the kernel\n",
+    "histogram_kernel[blocks_per_grid, threads_per_block](input_array, bins, bin_counts)\n",
+    "\n",
+    "# Verify the results\n",
+    "hist, _ = np.histogram(input_array, bins)\n",
+    "print(\"Computed histogram:\")\n",
+    "print(bin_counts)\n",
+    "print(\"\\nExpected histogram:\")\n",
+    "print(hist)\n"
    ]
   },
   {
@@ -903,16 +1131,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Soheil.Mohammadpour\\.conda\\envs\\predator\\lib\\site-packages\\numba\\cuda\\dispatcher.py:488: NumbaPerformanceWarning: \u001b[1mGrid size 1 will likely result in GPU under-utilization due to low occupancy.\u001b[0m\n",
+      "  warn(NumbaPerformanceWarning(msg))\n",
+      "c:\\Users\\Soheil.Mohammadpour\\.conda\\envs\\predator\\lib\\site-packages\\numba\\cuda\\cudadrv\\devicearray.py:885: NumbaPerformanceWarning: \u001b[1mHost array used in CUDA kernel will incur copy overhead to/from device.\u001b[0m\n",
+      "  warn(NumbaPerformanceWarning(msg))\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
